--- a/hh-ios/View/Table Cells/Home/Todos/TodoDetailsTableViewCell.xib
+++ b/hh-ios/View/Table Cells/Home/Todos/TodoDetailsTableViewCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="212.5" id="KGk-i7-Jjw" customClass="TodoDetailsTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="303"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="269" id="KGk-i7-Jjw" customClass="TodoDetailsTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="269"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="302.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="268.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t3m-vr-O7P">
@@ -52,21 +52,13 @@
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D9o-Jo-Tve">
-                        <rect key="frame" x="0.0" y="233" width="7" height="70"/>
+                        <rect key="frame" x="0.0" y="233" width="7" height="35"/>
                         <color key="backgroundColor" red="0.0" green="0.58823529409999997" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="7" id="1xF-vg-571"/>
-                            <constraint firstAttribute="height" constant="70" id="6jC-lM-F7Y"/>
+                            <constraint firstAttribute="height" constant="35" id="6jC-lM-F7Y"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ian Richard" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nmj-NW-lFC">
-                        <rect key="frame" x="16" y="268" width="288" height="35"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="35" id="EWm-1x-bkC"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Assigned To:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WwH-m7-4Dx">
                         <rect key="frame" x="16" y="233" width="288" height="35"/>
                         <constraints>
@@ -103,44 +95,38 @@
                 <constraints>
                     <constraint firstItem="wdm-gF-Ihm" firstAttribute="leading" secondItem="SUR-8H-yqN" secondAttribute="trailing" constant="9" id="0yW-L9-yvO"/>
                     <constraint firstItem="WwH-m7-4Dx" firstAttribute="top" secondItem="HrZ-BA-CmQ" secondAttribute="bottom" constant="20" id="4CF-ug-o5n"/>
-                    <constraint firstItem="Nmj-NW-lFC" firstAttribute="top" secondItem="WwH-m7-4Dx" secondAttribute="bottom" id="4zK-tk-Bra"/>
                     <constraint firstItem="Ipe-aL-tBB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="5ob-sY-GQe"/>
                     <constraint firstItem="t3m-vr-O7P" firstAttribute="leading" secondItem="pca-Lv-iB5" secondAttribute="trailing" constant="9" id="9sQ-F2-HDb"/>
-                    <constraint firstItem="kip-NL-D5e" firstAttribute="leading" secondItem="Ipe-aL-tBB" secondAttribute="trailing" constant="9" id="B53-Fw-RCj"/>
                     <constraint firstItem="HrZ-BA-CmQ" firstAttribute="top" secondItem="kip-NL-D5e" secondAttribute="bottom" id="CD8-nS-WhL"/>
-                    <constraint firstItem="HrZ-BA-CmQ" firstAttribute="leading" secondItem="Ipe-aL-tBB" secondAttribute="trailing" constant="9" id="DTG-9M-KRO"/>
-                    <constraint firstAttribute="bottom" secondItem="D9o-Jo-Tve" secondAttribute="bottom" id="HqC-ko-dcE"/>
                     <constraint firstItem="HrZ-BA-CmQ" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="K4J-iq-Bqh"/>
-                    <constraint firstItem="Nmj-NW-lFC" firstAttribute="leading" secondItem="D9o-Jo-Tve" secondAttribute="trailing" constant="9" id="NOJ-WF-ntD"/>
-                    <constraint firstAttribute="bottom" secondItem="D9o-Jo-Tve" secondAttribute="bottom" id="OCy-5z-9v2"/>
+                    <constraint firstItem="wdm-gF-Ihm" firstAttribute="top" secondItem="SUR-8H-yqN" secondAttribute="top" id="MUB-Zc-w9K"/>
                     <constraint firstItem="t3m-vr-O7P" firstAttribute="centerY" secondItem="pca-Lv-iB5" secondAttribute="centerY" id="PzI-bz-Hyj"/>
-                    <constraint firstItem="SUR-8H-yqN" firstAttribute="top" secondItem="pca-Lv-iB5" secondAttribute="bottom" constant="20" id="W5y-LE-UoP"/>
                     <constraint firstAttribute="trailing" secondItem="WwH-m7-4Dx" secondAttribute="trailing" constant="16" id="Xre-qW-zZh"/>
-                    <constraint firstItem="D9o-Jo-Tve" firstAttribute="top" secondItem="Ipe-aL-tBB" secondAttribute="bottom" constant="20" id="a04-sx-Qn2"/>
+                    <constraint firstItem="kip-NL-D5e" firstAttribute="leading" secondItem="Ipe-aL-tBB" secondAttribute="trailing" constant="9" id="dch-Xr-xdd"/>
+                    <constraint firstItem="HrZ-BA-CmQ" firstAttribute="leading" secondItem="Ipe-aL-tBB" secondAttribute="trailing" constant="9" id="e5H-hn-5kw"/>
                     <constraint firstItem="SUR-8H-yqN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="eIc-sG-e3s"/>
-                    <constraint firstAttribute="bottom" secondItem="Nmj-NW-lFC" secondAttribute="bottom" constant="-0.5" id="fxR-jq-GjS"/>
                     <constraint firstItem="kip-NL-D5e" firstAttribute="top" secondItem="wdm-gF-Ihm" secondAttribute="bottom" constant="20" id="g1L-Lu-3GV"/>
-                    <constraint firstAttribute="trailing" secondItem="Nmj-NW-lFC" secondAttribute="trailing" constant="16" id="htZ-wV-7SP"/>
+                    <constraint firstAttribute="bottom" secondItem="WwH-m7-4Dx" secondAttribute="bottom" constant="0.5" id="hoS-nq-1yw"/>
+                    <constraint firstItem="kip-NL-D5e" firstAttribute="top" secondItem="Ipe-aL-tBB" secondAttribute="top" id="j0F-ot-dJ9"/>
                     <constraint firstItem="WwH-m7-4Dx" firstAttribute="leading" secondItem="D9o-Jo-Tve" secondAttribute="trailing" constant="9" id="lJd-gf-Uvj"/>
                     <constraint firstItem="t3m-vr-O7P" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="lZN-7f-sm3"/>
                     <constraint firstAttribute="trailingMargin" secondItem="wdm-gF-Ihm" secondAttribute="trailing" id="nQU-Sa-HSC"/>
                     <constraint firstItem="t3m-vr-O7P" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="22" id="p4m-hu-AIP"/>
                     <constraint firstItem="D9o-Jo-Tve" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="qh4-qF-Adn"/>
+                    <constraint firstItem="WwH-m7-4Dx" firstAttribute="top" secondItem="D9o-Jo-Tve" secondAttribute="top" id="qwc-HK-4vZ"/>
                     <constraint firstAttribute="trailingMargin" secondItem="kip-NL-D5e" secondAttribute="trailing" id="sNu-Tu-avF"/>
                     <constraint firstItem="pca-Lv-iB5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="tj7-LK-Ly4"/>
-                    <constraint firstItem="Ipe-aL-tBB" firstAttribute="top" secondItem="SUR-8H-yqN" secondAttribute="bottom" constant="20" id="xMx-uP-HUE"/>
                     <constraint firstItem="wdm-gF-Ihm" firstAttribute="top" secondItem="t3m-vr-O7P" secondAttribute="bottom" constant="20" id="yrK-fZ-Yz3"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
-                <outlet property="assigneeLabel" destination="Nmj-NW-lFC" id="5ck-0V-TmI"/>
                 <outlet property="assigneeSectionLabel" destination="WwH-m7-4Dx" id="YSU-yo-0Cg"/>
                 <outlet property="createdByLabel" destination="HrZ-BA-CmQ" id="pnL-od-6qK"/>
                 <outlet property="descrTextView" destination="wdm-gF-Ihm" id="0Hv-WF-ogO"/>
                 <outlet property="titleField" destination="t3m-vr-O7P" id="Yzd-BM-t8z"/>
             </connections>
-            <point key="canvasLocation" x="118" y="59.5"/>
+            <point key="canvasLocation" x="118" y="42.5"/>
         </tableViewCell>
     </objects>
 </document>
