Settings screen with icons, debug on network calls, Added avatar ability, loading icons, UI debug

--- a/hh-ios/Controller/Authentication/JoinHouseViewController.xib
+++ b/hh-ios/Controller/Authentication/JoinHouseViewController.xib
@@ -85,7 +85,7 @@
                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
                                 </button>
-                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="jDw-sb-04k">
+                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="jDw-sb-04k">
                                     <rect key="frame" x="177" y="158" width="20" height="20"/>
                                 </activityIndicatorView>
                             </subviews>
