--- a/hh-ios/Controller/Home/Settings/UserEditViewController.xib
+++ b/hh-ios/Controller/Home/Settings/UserEditViewController.xib
@@ -9,9 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserEditViewController">
             <connections>
-                <outlet property="tableView" destination="zKT-yv-ZRY" id="0Rz-DT-4ov"/>
+                <outlet property="tableView" destination="cbw-Vm-e4U" id="UF9-lz-Ilk"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,17 +20,17 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zKT-yv-ZRY">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cbw-Vm-e4U">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" red="0.81176470588235294" green="0.84705882352941175" blue="0.86274509803921573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="0.81176470588235294" green="0.84705882352941175" blue="0.86274509803921573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="zKT-yv-ZRY" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="Cxe-x3-MeR"/>
-                <constraint firstItem="zKT-yv-ZRY" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="bWg-ad-I78"/>
-                <constraint firstItem="zKT-yv-ZRY" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="p0d-sW-iF5"/>
-                <constraint firstItem="zKT-yv-ZRY" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="uEJ-Fr-RFb"/>
+                <constraint firstItem="cbw-Vm-e4U" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="bhT-Jr-ecr"/>
+                <constraint firstItem="cbw-Vm-e4U" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="dIS-XC-ykj"/>
+                <constraint firstItem="cbw-Vm-e4U" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="sV6-F9-yPf"/>
+                <constraint firstItem="cbw-Vm-e4U" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="u2N-XV-cVN"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="34.5" y="126.5"/>
